# vibecodeine

./: .agent.md  .aider.conf.example.yml  .env.example  .gitattributes  .gitignore  .gitkeep  .pre-commit-config.yaml  2d.html  3d-immersion.html  404.html  AGENTS.md  CAPACIDADES.md  CLAUDE.md  CONTRIBUTING.md  CURATOR.html  HANDOFF_2026-06-21_v0.34.0_limpieza_estructural.md  HANDOFF_2026-06-24_v0.35.10.md  HANDOFF_2026-06-28_full.md  HANDOFF_2026-06-28_readme_logo_clean_summary.md  HANDOFF_2026-06-30_agent_ops_base.md  HANDOFF_2026-06-30_agente3_resolume_base_docs_duales.md  HANDOFF_2026-06-30_svg_studio_fixes.md  HANDOFF_2026-06-30_v0.48.2_svg_studio_editable_svg_import.md  HANDOFF_2026-06-30_v0.48.2_svg_studio_svg_image_editable.md  HANDOFF_2026-06-30_v0.48.4_chataigne_layout_visible.md  HANDOFF_2026-07-02_cotizacion_eventos_y_flyers_suplementos.md  HANDOFF_2026-07-02_nombre_asistente_vibo.md  HANDOFF_v0.42.2.md  HANDOFF_v0.43.0.md  HANDOFF_v0.43.1.md  HANDOFF_v0.43.2.md  HANDOFF_v0.44.0.md  HANDOFF_v0.46.0.md  HANDOFF_v0.47.0.md  HANDOFF_v0.47.10.md  HANDOFF_v0.47.11.md  HANDOFF_v0.47.13.md  HANDOFF_v0.47.9.md  HOTFIX_2026-06-28_airdrop_checkpoint_timeout.md  INSTALL.txt  (+42 more)
.archive/: README.md
.claude/: settings.json
.githooks/: pre-commit
briefs/: PROMPT_RIDER_LAYOUT.md
checkpoints/: 2026-06-12_21-54_clean-start.md  2026-06-12_21-57_quitar-script-reset.md  2026-06-12_22-02_agregar-old.md  2026-06-12_22-11_limpiar-old-y-conservar-referencia-script.md  2026-06-12_22-16_mejorar-new-flyer-con-gitkeep.md  2026-06-12_22-20_probar-set-input-flyer.md  2026-06-12_22-23_crear-listado-de-proyectos-flyer.md  2026-06-12_22-24_crear-status-flyer.md  2026-06-12_checkpoint-final-antes-descarga-workspace.md  2026-06-12_flujo-ia-avanzada-optimizacion.md  2026-06-12_flujo-relay-multi-ia.md  2026-06-12_integracion-portfolio-auto.md  2026-06-12_inventario-automatizaciones-diseno-motion.md  2026-06-12_privacidad-y-compartir-con-ia.md  2026-06-12_simplificacion-flujo-minimo.md  2026-06-13_00-09_crear-flyer-latest.md  2026-06-13_02-24_definir-dimensiones-del-orden.md  2026-06-13_02-26_crear-entrada-para-ia.md  2026-06-13_02-30_actualizar-readme-como-entrada-principal.md  2026-06-13_02-38_refe-old.md  2026-06-13_02-42_respaldar-reference-old-y-quitar-exe.md  2026-06-13_02-44_crear-importador-simple-desde-correo.md  2026-06-13_02-49_arreglar-importador-correo-sin-bash-interno.md  2026-06-13_03-19_documentar-importador-desde-correo.md  2026-06-14_actions-node24-optin.md  (+53 more)
projects/tapiz/: DIRECTION.md  README.md  TILDE_DEL_HIGH.md  VASO_ANIMADO.md  VOLA.md  example_agent.py  feedback.md  pyproject.toml  vaso_animado.py  vibecode_spaces.html  vibecode_spaces.py  vibecode_void.html  vibecode_void.py
projects/tapiz/piezas_curadas/: README.md
projects/tapiz/vibecode/: __init__.py  ansi.py  cauce.py  life.py  loom.py  power.py  render.py  spaces.py  svg_export.py  void.py  void_shapes.py
projects/tapiz/vibecode.egg-info/: PKG-INFO  SOURCES.txt
projects/tapiz/vibecode/motifs/: __init__.py  boteh.py  cloudband.py  comb.py  crab.py  double_cup.py  elibelinde.py  gul.py  herati.py  lattice.py  memling_gul.py  running_dog.py  scorpion.py  star.py  tree_of_life.py  vase.py  zigzag.py
(+1618 files in other folders)
